# pipeline-and-chill

./: .gitignore  .pre-commit-config-ci.yaml  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  pytest.ini  settings.json  test_infrastructure.py
.github/workflows/: README.md  ci.yml  integration.yml  quality.yml  test.yml
backend/: .env.example
backend/chillflow-batch/: README.md  pyproject.toml
backend/chillflow-batch/batch/: __init__.py  __main__.py  aggregator.py  cli.py  loader.py  producer.py  scheduler.py
backend/chillflow-batch/k8s/: cronjob.yaml  deployment.yaml
backend/chillflow-batch/tests/: __init__.py  conftest.py  test_aggregator.py  test_dependencies.py  test_integration.py  test_integration_proper.py  test_loader.py  test_producer.py  test_simple_integration.py
backend/chillflow-core/: README.md  pyproject.toml
backend/chillflow-core/chillflow/: __init__.py  settings.py
backend/chillflow-core/chillflow/clients/: __init__.py  database.py  kafka.py  redis.py
backend/chillflow-core/chillflow/migrations/: README.md  alembic.ini  seed_zones.py
backend/chillflow-core/chillflow/migrations/alembic/: env.py
backend/chillflow-core/chillflow/models/: __init__.py  trip.py
backend/chillflow-core/chillflow/schemas/: __init__.py
backend/chillflow-core/chillflow/utils/: events.py  logging.py  models.py
backend/chillflow-core/core/: __init__.py  metrics.py
backend/chillflow-core/core/clients/: __init__.py  database.py  kafka.py  redis.py
backend/chillflow-core/core/migrations/: seed_zones.py  setup_database.py
backend/chillflow-core/core/migrations/alembic/: env.py
backend/chillflow-core/core/migrations/alembic/versions/: 001_initial_chillflow_schema.py
backend/chillflow-core/core/models/: __init__.py  trip.py
backend/chillflow-core/core/schemas/: __init__.py  events.py  trip.py
backend/chillflow-core/core/utils/: events.py  hashing.py  logging.py  models.py
backend/chillflow-core/tests/: test_clients.py  test_core.py  test_migrations.py  test_models.py  test_schemas.py  test_settings.py
backend/chillflow-stream/: README.md  pyproject.toml
backend/chillflow-stream/stream/: __init__.py  cli.py  completion_policy.py  event_ingestor.py  events.py  kafka_assembly_loop.py  state_manager.py  trip_assembler.py  trip_assembler_processor.py  trip_builder.py  trip_db_writer.py  trip_event_producer.py
backend/chillflow-stream/tests/: _kafka_helpers.py  conftest.py  test_assembler.py  test_integration.py  test_integration_proper.py  test_replay.py  test_simple.py  test_trip_assembler.py  test_trip_event_producer.py
backend/chillflow-stream/tests/integration/: test_cli_integration.py  test_db_writer.py  test_kafka_loop.py  test_pipeline_integration.py
backend/chillflow-stream/tests/unit/: test_completion_policy.py  test_event_ingestor.py  test_trip_builder.py  test_trip_event_producer.py  test_trip_processor.py
docs/: README.md
docs/architecture/: data-flow.md  database.md  system-overview.md  testing-strategy.md
docs/architecture/diagrams/: ci-pipeline.mmd  data-flow.mmd  deployment-architecture.mmd  system-architecture.mmd  tech-stack.mmd  testing-strategy.mmd
docs/deployment/: quick-start.md
docs/diagrams/: architecture.mmd
frontend/: README.md
frontend/react/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.mjs
frontend/react/src/: App.test.tsx  App.tsx  index.css
frontend/streamlit/: dashboard.py  dashboard_ai.py
platform/: README.md
platform/compose/: env.example
platform/k8s/base/: kustomization.yaml
scripts/analytics/: generate_reports.py
scripts/data-management/: clean_database.py  cleanup_corrupted_files.sh  create_curated_data.py  curate_all_data.py  download_nyc_data.sh  download_reference_data.sh  explore_curated_data.py  explore_taxi_data.py  sanity_check_data.sh  verify_curated_data.py
scripts/demo/: README_DEMO.md  demo_batch_producer.py  demo_chillflow_batch.py  demo_full_pipeline.py  demo_hashing.py  demo_replay_producer.py  demo_trip_assembler.py  run_demo.sh
tests/: conftest.py
tests/contracts/: __init__.py  test_data_schemas.py
tests/e2e/: __init__.py  test_full_pipeline.py  test_performance.py
tests/infrastructure/: test_platform.py
tests/performance/: test_benchmarks.py
tests/smoke/: __init__.py  test_cli_smoke.py
tests/unit/: test_core.py  test_metrics_collector.py
(+14 files in other folders)
