[project]
name = "pipeline-and-chill"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "chillflow-batch",
    "chillflow-core",
    "chillflow-stream",
    "pandas>=2.3.3",
    "pyarrow>=22.0.0",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-cov>=7.0.0",
]

[tool.uv.workspace]
members = [
    "backend/chillflow-core",
    "backend/chillflow-batch",
    "backend/chillflow-stream",
]

[tool.uv.sources]
chillflow-core = { workspace = true }
chillflow-batch = { workspace = true }
chillflow-stream = { workspace = true }

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
]
