[project]
name = "chillflow-batch"
version = "0.1.0"
description = "ChillFlow Batch Processing Service"
requires-python = ">=3.12"
dependencies = [
    "chillflow-core>=0.1.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "pyarrow>=12.0.0",
    "fastparquet>=0.8.0",
    "structlog>=24.0.0",
    "click>=8.0.0",
    "schedule>=1.2.0",
    "tqdm>=4.65.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-mock>=3.10.0",
    "pytest-asyncio>=0.21.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["batch"]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-mock>=3.15.1",
]
