[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "chillflow-stream"
version = "0.1.0"
description = "ChillFlow Stream Service - Real-time trip event processing"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chillflow-core",
    "kafka-python>=2.0.2",
    "structlog>=24.1.0",
    "pydantic>=2.0.0",
    "pandas>=2.0.0",
    "tqdm>=4.65.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.10.0",
    "black>=24.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
]
test = [
    "testcontainers>=3.7.0",
    "testcontainers[postgres]>=3.7.0",
    "testcontainers[kafka]>=3.7.0",
    "pytest-cov>=4.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["stream"]

[tool.black]
line-length = 100
target-version = ['py312']

[tool.isort]
profile = "black"
line_length = 100
